--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,79 +13,79 @@
     <link rel="stylesheet" href="/css/navbar.css">
 </head>
 
-    <body>
+<body>
 
-        <%- include("partials/navbar.ejs") %>
+    <%- include("partials/navbar.ejs") %>
 
-            <section class="news-section">
-                <div class="main-div">
-                    <div class="left-div">
-                        <div class="left-side-content">
-                            <h1>Lorem</h1>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum eaque fugiat
-                                obcaecati
-                                dolores unde autem nulla aut dolor eius nemo praesentium, rem, in odit sint quod
-                                aperiam
-                                ullam
-                                dolorem reiciendis?</p>
-                            <div class="search">
-                                <form class="search-form" action="/search" method="POST">
-                                    <input class="search-input" name="search" type="search" placeholder="Search"
-                                        aria-label="Search">
-                                    <button class="search-button" type="submit">Search</button>
-                                </form>
-                            </div>
+        <section class="news-section">
+            <div class="main-div">
+                <div class="left-div">
+                    <div class="left-side-content">
+                        <h1>Lorem</h1>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum eaque fugiat
+                            obcaecati
+                            dolores unde autem nulla aut dolor eius nemo praesentium, rem, in odit sint quod
+                            aperiam
+                            ullam
+                            dolorem reiciendis?</p>
+                        <div class="search">
+                            <form class="search-form" action="/search" method="POST">
+                                <input class="search-input" name="search" type="search" placeholder="Search"
+                                    aria-label="Search">
+                                <button class="search-button" type="submit">Search</button>
+                            </form>
                         </div>
                     </div>
-                    <div class="right-div"></div>
                 </div>
-            </section>
+                <div class="right-div"></div>
+            </div>
+        </section>
 
 
 
-            <section class="news-boxes-main-div">
-                <div class="news-boxes">
-                    <% articles.forEach(function(article,index){ %>
+        <section class="news-boxes-main-div">
+            <div class="news-boxes">
+                <% articles.forEach(function(article,index){ %>
 
-                        <% if ((typeof article.url=='object' ) || (typeof article.title=='object' ) || (typeof
-                            article.urlToImage=='object' ) || (typeof article.content=='object' )){ %>
-                            <% } else{ %>
-                                <div class="boxes">
-                                    <div class="boxes-img">
-                                        <img src="<%= article.urlToImage %> " alt="">
-                                    </div>
-                                    <div class="boxes-content">
-                                        <p>
-                                            <%= article.title %>
-                                        </p>
-                                        <p>
-                                            <%= article.content %>
-                                        </p>
-                                    </div>
+                    <% if ((typeof article.url=='object' ) || (typeof article.title=='object' ) || (typeof
+                        article.urlToImage=='object' ) || (typeof article.content=='object' )){ %>
+                        <% } else{ %>
+                            <div class="boxes">
+                                <div class="boxes-img">
+                                    <img src="<%= article.urlToImage %> " alt="">
                                 </div>
-                                <% } %>
-                                    <% }) %>
+                                <div class="boxes-content">
+                                    <p>
+                                        <%= article.title %>
+                                    </p>
+                                    <p>
+                                        <%= article.content %>
+                                    </p>
+                                </div>
+                            </div>
+                            <% } %>
+                                <% }) %>
+            </div>
+            <div class="ad-sense">
+                <div class="news-category">
+                    <ul>
+                        <li><a href="/news/business">Business</a></li>
+                        <li><a href="/news/entertainment">Entertain</a></li>
+                        <li><a href="/news/general">General</a></li>
+                        <li><a href="/news/health">Health</a></li>
+                        <li><a href="/news/technology">Technology</a></li>
+                        <li><a href="/news/sports">Sports</a></li>
+                        <li><a href="/news/science">Science</a></li>
+                    </ul>
                 </div>
-                <div class="ad-sense">
-                    <div class="news-category">
-                        <ul>
-                            <li><a target="_blank" href="/news/business">Business</a></li>
-                            <li><a target="_blank" href="/news/entertainment">Entertain</a></li>
-                            <li><a target="_blank" href="/news/general">General</a></li>
-                            <li><a target="_blank" href="/news/health">Health</a></li>
-                            <li><a target="_blank" href="/news/technology">Technology</a></li>
-                            <li><a target="_blank" href="/news/sports">Sports</a></li>
-                            <li><a target="_blank" href="/news/science">Science</a></li>
-                        </ul>
-                    </div>
-                    <div class="ad-div"></div>
-                </div>
-            </section>
+                <div class="ad-div"></div>
+            </div>
+        </section>
 
 
-            <%- include("partials/footer.ejs") %>
+        <%- include("partials/footer.ejs") %>
 
 
-    </body>
+</body>
 
-    </html>
+</html>
