--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,6 +61,9 @@
                                     <p>
                                         <%= article.content %>
                                     </p>
+                                    <p>
+                                        <a href="<%= article.url %>">Click here to see more</a>
+                                    </p>
                                 </div>
                             </div>
                             <% } %>
